--- a/src/pages/application/index.module.css
+++ b/src/pages/application/index.module.css
@@ -1,14 +1,13 @@
 .container {
   display: flex;
   gap: 32px;
-  height: 600px;
   align-items: stretch;
   flex-direction: column;
 
   .application {
     display: flex;
     gap: 32px;
-
+    height: 600px;
     & > * {
       flex: 1 1 0px;
     }
@@ -60,8 +59,11 @@
       border-radius: 12px;
       display: flex;
       flex-direction: column;
+      height: 100%;
+      overflow: scroll;
 
       & .preview-content {
+        white-space: pre-wrap;
         margin: 0;
         flex: 1 1 0px;
         padding: 24px;
