--- a/src/components/input/index.module.css
+++ b/src/components/input/index.module.css
@@ -5,4 +5,9 @@
   border-radius: 6px;
   border: 1px solid #d0d5dd;
   box-shadow: 0px 1px 2px 0px #1018280d;
+
+  &:focus-visible {
+    outline: 4px solid #d3f8df;
+    border-color: #73e2a3;
+  }
 }
