--- a/src/pages/application/jumpling-ball/index.module.css
+++ b/src/pages/application/jumpling-ball/index.module.css
@@ -1,4 +1,8 @@
 .container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -6,6 +10,7 @@
 
 .circle {
   animation: jump 1.5s ease-in-out infinite;
+  height: 320px;
 }
 
 @keyframes jump {
