add responsive layout to application page, show try again on already generated application

--- a/src/components/button/index.module.css
+++ b/src/components/button/index.module.css
@@ -20,30 +20,41 @@
     cursor: not-allowed;
   }
 
+  &[data-size="large"] {
+    padding: 16px 28px;
+    font-size: 18px;
+    line-height: 28px;
+
+    gap: 12px;
+  }
+
   &[data-variant="regular"] {
     color: #fff;
     background-color: var(--color-primary);
-
+    border: 1px solid var(--color-primary);
+    & svg path {
+      stroke: #fff;
+    }
     &:disabled {
       background-color: #d0d5dd;
       color: #98a2b3;
+      & svg path {
+        stroke: #98a2b3;
+      }
     }
   }
 
   &[data-variant="outlined"] {
     background-color: transparent;
-    color: var(--color-primary);
-    border: 1px solid var(--color-primary);
+    color: #344054;
+    border: 1px solid #d0d5dd;
+
+    & svg path {
+      stroke: #344054;
+    }
 
     &:disabled {
       opacity: 0.5;
     }
-  }
-
-  &[data-size="large"] {
-    padding: 16px 28px;
-    font-size: 18px;
-    line-height: 28px;
-    gap: 12px;
   }
 }
