--- a/src/components/button/index.module.css
+++ b/src/components/button/index.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   gap: 8px;
   border: none;
-  padding: 10px 18px;
+  padding: 9px 17px;
   border-radius: var(--border-radius);
   cursor: pointer;
   font-family: var(--font-family-primary);
@@ -15,13 +15,14 @@
   line-height: 24px;
   transition: background-color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
+  border: 1px solid;
 
   &:disabled {
     cursor: not-allowed;
   }
 
   &[data-size="large"] {
-    padding: 16px 28px;
+    padding: 15px 27px;
     font-size: 18px;
     line-height: 28px;
 
@@ -31,7 +32,7 @@
   &[data-variant="regular"] {
     color: #fff;
     background-color: var(--color-primary);
-    border: 1px solid var(--color-primary);
+    border-color: var(--color-primary);
     & svg path {
       stroke: #fff;
     }
