--- a/src/components/textarea/index.module.css
+++ b/src/components/textarea/index.module.css
@@ -1,7 +1,7 @@
 .textarea {
   font-size: 16px;
   line-height: 25px;
-  padding: 11px 13px 0px;
+  padding: 11px 13px;
   border-radius: 6px;
   border: 1px solid #d0d5dd;
   box-shadow: 0px 1px 2px 0px #1018280d;
