--- a/src/components/input/index.module.css
+++ b/src/components/input/index.module.css
@@ -6,8 +6,7 @@
   border: 1px solid #d0d5dd;
   box-shadow: 0px 1px 2px 0px #1018280d;
 
-  &:focus-visible {
-    outline: 4px solid #d3f8df;
-    border-color: #73e2a3;
+  &::placeholder {
+    color: #667085;
   }
 }
