--- a/src/components/textarea/index.module.css
+++ b/src/components/textarea/index.module.css
@@ -6,4 +6,8 @@
   border: 1px solid #d0d5dd;
   box-shadow: 0px 1px 2px 0px #1018280d;
   resize: none;
+
+  &::placeholder {
+    color: #667085;
+  }
 }
