return back home icon on mobile

--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -38,9 +38,7 @@
       align-items: center;
 
       @media (max-width: 768px) {
-        & a {
-          display: none;
-        }
+        flex-direction: row-reverse;
       }
     }
   }
