--- a/src/main.css
+++ b/src/main.css
@@ -34,4 +34,9 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 32px;
+
+  @media (max-width: 768px) {
+    padding: 0px;
+    gap: 0px;
+  }
 }
