--- a/src/pages/application/index.module.css
+++ b/src/pages/application/index.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
 
   @media (max-width: 1280px) {
-    padding: var(--space-lg);
+    padding: 0px var(--space-lg) var(--space-lg);
   }
 
   .application {
