refactor controls with control base

--- a/src/components/form-control/index.module.css
+++ b/src/components/form-control/index.module.css
@@ -7,27 +7,12 @@
   line-height: 20px;
   color: #344054;
 
-  & textarea,
-  & input {
-    &:focus-visible {
-      outline: 4px solid #d3f8df;
-      border-color: #73e2a3;
-    }
-  }
-
-  & .hint {
+  & > .hint {
     color: #475467;
   }
 
   &[data-error="true"] {
-    & textarea,
-    & input {
-      &:focus-visible {
-        outline: 4px solid #fee4e2;
-        border-color: #f04438;
-      }
-    }
-    & .hint {
+    & > .hint {
       color: #f04438;
     }
   }
