--- a/src/components/input/index.module.css
+++ b/src/components/input/index.module.css
@@ -1,12 +1,19 @@
-.input {
-  font-size: 16px;
-  line-height: 25px;
-  padding: 7px 11px 6px;
-  border-radius: 6px;
-  border: 1px solid #d0d5dd;
-  box-shadow: 0px 1px 2px 0px #1018280d;
+.container {
+  overflow: hidden;
+  .input {
+    border: none;
+    outline: none;
 
-  &::placeholder {
-    color: #667085;
+    font-size: 16px;
+    line-height: 24px;
+
+    margin: 0px -8px;
+    padding: 8px 11px 6px;
+    width: calc(100% + 16px);
+    box-sizing: border-box;
+
+    &::placeholder {
+      color: #667085;
+    }
   }
 }
