--- a/src/components/textarea/index.module.css
+++ b/src/components/textarea/index.module.css
@@ -1,13 +1,31 @@
-.textarea {
-  font-size: 16px;
-  line-height: 25px;
-  padding: 11px 13px;
-  border-radius: 6px;
-  border: 1px solid #d0d5dd;
-  box-shadow: 0px 1px 2px 0px #1018280d;
-  resize: none;
+.container {
+  .textarea {
+    outline: none;
+    border: none;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+    line-height: 25px;
+    padding: 11px 5px;
+    resize: none;
 
-  &::placeholder {
-    color: #667085;
+    &::-webkit-scrollbar {
+      width: 4px;
+    }
+
+    &::-webkit-scrollbar-track {
+      margin: 12px 0px;
+      background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #d0d5dd;
+      border-radius: 4px;
+    }
+
+    &::placeholder {
+      color: #667085;
+    }
   }
 }
