--- a/src/pages/application/index.module.css
+++ b/src/pages/application/index.module.css
@@ -86,6 +86,10 @@
         line-height: 28px;
         box-sizing: border-box;
         color: #667085;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
       }
 
       & .preview-actions {
